k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: project-container
          image: localhost:5000/proyecto:latest
          ports:
            - containerPort: 8081
