k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
